# civic-observer

./: .dockerignore  .env-dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  civic-observer.code-workspace  compose-entrypoint.sh  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.production-base.yml  docker-compose.production.yml  docker-compose.quickwit-s3.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml  deploy-production.yml
.ocode/cache/: context.db
analytics/: context_processors.py
analytics/templatetags/: analytics.py  utm.py
apikeys/: admin.py  forms.py  internal_views.py  models.py  urls.py  views.py
apikeys/migrations/: 0001_initial.py
clip/: apps.py  services.py  urls.py  views.py
config/: asgi.py  urls.py  views.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
deploy/: Caddyfile  Caddyfile.template  README.md  blue-green-deploy.sh  status.sh
docker/: Quickwit.Dockerfile  pgbouncer.ini  postgresql.conf  quickwit-entrypoint.sh  userlist.txt
docker/postgres/: postgresql.conf
docs/: MEILISEARCH.md  PAGE_PARTITIONING.md  PHASE1-IMPLEMENTATION-SUMMARY.md  RESILIENT_BACKFILL.md  SCALING_100M_PAGES.md  TANTIVY_QUICKWIT_RESEARCH.md  crunchybridge-configuration.md  email-configuration.md  saved-search-notifications.md  webhook-api.md
docs/operations/: rebackfill-failed-municipalities.md
docs/plans/: 2024-11-27-unified-deploy-implementation.md  2024-11-27-unified-deploy-strategy-design.md  2025-01-28-notebooks-design.md  2025-01-28-notebooks-implementation.md  2025-11-29-api-key-implementation.md  2025-11-29-notification-channels.md  2025-12-03-umami-analytics-design.md  2025-12-03-umami-analytics-implementation.md  2025-12-04-marketing-refresh.md  2025-12-05-utm-tracking-design.md  2025-12-05-utm-tracking-implementation.md  2025-12-19-municipalities-page-implementation.md  2025-12-19-non-root-docker-design.md  2025-12-19-non-root-docker-implementation.md  2025-12-31-backfill-resilience-design.md  2025-12-31-resilient-backfill.md  2026-01-24-meetingpage-performance-and-completeness.md  2026-01-24-resilient-backfill-implementation.md  2026-04-10-postgres-fts-diagnosis.md  2026-04-28-quickwit-migration.md  progressive-search-loading-plan.md  search-optimization-plan.md
frontend/js/: analytics.js
meetings/: admin.py  forms.py  models.py  resilient_backfill.py  services.py  tasks.py  test_resilient_backfill.py  test_resilient_backfill_command.py  tests.py  urls.py  utils.py  views.py
meetings/migrations/: 0001_initial.py  0002_add_fulltext_search_index.py  0003_optimize_fulltext_search.py  0004_meetingdocument_meeting_name_search_vector.py  0005_backfillprogress.py  0006_backfilljob.py  0007_add_composite_index_for_search.py  0008_optimize_gin_indexes.py  0009_tune_autovacuum.py
meetings/templatetags/: __init__.py  meeting_filters.py
meetings/tests/: test_integration.py  test_models.py  test_search_performance.py  test_services.py  test_tasks.py
municipalities/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
municipalities/migrations/: 0001_initial.py  (+4 more)
notebooks/: admin.py  forms.py  models.py  urls.py  views.py
notifications/: admin.py  digest_views.py  forms.py  models.py  services.py  urls.py  views.py
quickwit/: index-config.yaml  quickwit-config-s3.yaml  quickwit-config.yaml
searches/: admin.py  cache.py  forms.py  indexing.py  meilisearch_client.py  models.py  quickwit_client.py  search_backends.py  services.py  tasks.py  test_admin.py  test_data_utils.py  test_management_commands.py  test_utils.py  tests.py  urls.py  views.py
templates/: api.html  base.html  base.html.bak  homepage.html  login.html  stagedoor_approval_needed.html  stagedoor_token_input.html
tests/: conftest.py  factories.py
users/: admin.py  models.py  tests.py  urls.py  views.py
(+141 files in other folders)
